--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,10 @@
+# Works well with docker and docker-compose CLI
+# docker run -p 3000:3000 -v /home/node/app/node_modules -v $(pwd):/home/node/app
+# or
+# docker-compose up --build
 FROM node:alpine
 
-WORKDIR /app
+WORKDIR /home/node/app
 
 COPY --chown=node:node package.json .
 
