--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,7 +4,15 @@
 # docker-compose up --build
 FROM node:alpine
 
+# USER node
+# RUN mkdir -p /home/node/app
+# WORKDIR /home/node/app
+# or
+# RUN mkdir -p /home/node/app && chown -R node:node /home/node/app
+# WORKDIR /home/node/app
+# or
 WORKDIR /home/node/app
+RUN chown -R node:node /home/node/app
 
 COPY --chown=node:node package.json .
 
