--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - /home/node/app/node_modules
       - .:/home/node/app
   tests:
+    # environment:
+    #   - CI=true
     build: 
       context: .
       dockerfile: Dockerfile.dev
