Change working directory

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,8 +11,8 @@ FROM node:alpine
 # RUN mkdir -p /home/node/app && chown -R node:node /home/node/app
 # WORKDIR /home/node/app
 # or
-WORKDIR /home/node/app
-RUN chown -R node:node /home/node/app
+WORKDIR /app
+RUN chown -R node:node /app
 
 COPY --chown=node:node package.json .
 
