--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports: 
       - "3000:3000"
     volumes: 
-      - /home/node/app/node_modules
-      - .:/home/node/app
+      - /app/node_modules
+      - .:/app
   tests:
     # environment:
     #   - CI=true
@@ -16,6 +16,6 @@ services:
       context: .
       dockerfile: Dockerfile.dev
     volumes: 
-      - /home/node/app/node_modules
-      - .:/home/node/app
+      - /app/node_modules
+      - .:/app
     command: npm run test
