Fix for aws and docker deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 sudo: required
-
-language: node_js
-node_js:
-    - "stable"
+language: generic
 
 services:
   - docker
@@ -11,19 +8,19 @@ before_install:
   - docker build -t isidaruk/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true isidaruk/docker-react npm run test -- --coverage
+  - docker run -e CI=true isidaruk/docker-react npm run test
 
 deploy:
   provider: elasticbeanstalk
   region: "eu-central-1"
   app: "docker-react"
-  env: "$AWS_EB_ENVIRONMENT"
+  env: $AWS_EB_ENVIRONMENT
   bucket_name: "elasticbeanstalk-eu-central-1-966278727093"
   bucket_path: "docker-react"
   on:
     branch: master
-  access_key_id: "$AWS_ACCESS_KEY_ID"
-  secret_access_key: "$AWS_SECRET_ACCESS_KEY"
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_KEY
   skip_cleanup: true 
 
 after_deploy:
