--- a/.travis.yml
+++ b/.travis.yml
@@ -8,19 +8,19 @@ before_install:
   - docker build -t isidaruk/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true isidaruk/docker-react npm run test
+  - docker run -e CI=true isidaruk/docker-react npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
   region: "eu-central-1"
   app: "docker-react"
-  env: $AWS_EB_ENVIRONMENT
+  env: "$AWS_EB_ENVIRONMENT"
   bucket_name: "elasticbeanstalk-eu-central-1-966278727093"
   bucket_path: "docker-react"
   on:
     branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+  access_key_id: "$AWS_ACCESS_KEY_ID"
+  secret_access_key: "$AWS_SECRET_ACCESS_KEY"
   skip_cleanup: true 
 
 after_deploy:
